# python-gamedig

./: __init__.py  games.json  pyproject.toml  setup.py  test.direct.py  test.py  utils.py
gamedig/: __init__.py  utils.py
gamedig/protocols/: core.py  minecraft.py  valve.py
games/: base.py
protocols/: __init__.py  base.py  valve.py
